# sepaeii

./: .gitlab-ci.yml  Cargo.toml  README.md
assets/levels/level01/: lvlMario.tmx
assets/levels/roam/: map.json  map.tmx  map2.json  map2.tmx  test.json  untitled.json
assets/sprites/.unresolved/: Level 01 Menu.psd  MarioPanda.psd  Panda.psd  PenguinSprite.psd  chars.psd
assets/tilesets/: classical_temple_tiles.tsx  terrain.tsx  tileset.tsx  town_forest_tiles.tsx
sepaeii_macros/: Cargo.toml
sepaeii_macros/src/: lib.rs
src/: main.rs
src/common/: components.rs  systems.rs
src/level01/: components.rs  plugin.rs
src/level01/setup/: map.rs  mod.rs  pandaman.rs
src/level01/states/: mod.rs
src/level01/systems/: animate_character.rs  animate_walkable.rs  map.rs  mod.rs  player_movement.rs
src/levels/: mod.rs
src/levels/level01/: components.rs  plugin.rs
src/levels/level01/setup/: camera.rs  map.rs  mod.rs  pandaman.rs
src/levels/level01/states/: level01_state.rs  mod.rs
src/levels/level01/systems/: camera_movement.rs  interactions.rs  menu.rs  mod.rs  player_movement.rs  toggle_menu.rs
src/levels/roam/: components.rs  plugin.rs  plugins.rs  states.rs  systems.rs
src/levels/roam/setup/: mod.rs  npc.rs  pandaman.rs
src/levels/roam/systems/: animate_walkable.rs  camera.rs  debug.rs  dialog.rs  (+8 more)
src/panda_bros/: components.rs  mod.rs  plugin.rs
src/panda_bros/states/: mod.rs  panda_bros.rs
src/panda_bros/systems/: debug.rs  mod.rs  player_movement.rs  setup.rs  tile_interpolation.rs  toggle_menu.rs
src/roam/: components.rs  mod.rs  plugin.rs
src/roam/setup/: map.rs  mod.rs  npc.rs  pandaman.rs
src/roam/states/: mod.rs  roam_state.rs
src/roam/systems/: animate_walkable.rs  debug.rs  interactions.rs  map.rs  menu.rs  mod.rs  npc_movement.rs  player_movement.rs  render_main_menu.rs  setup.rs  tile_interpolation.rs  toggle_menu.rs
