[package]
name = "sepaeii"
version = "0.1.0"
edition = "2018"

[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }
bevy_tiled_prototype = { git = "https://github.com/j-mcavoy/bevy_tiled.git" }
tiled = "0.9.5"
sepaeii_macros = { path = "sepaeii_macros" }

[features]
destructuring_assignment =[]
