[package]
name = "sepaeii"
version = "0.1.0"
edition = "2018"

[dependencies]
bevy = { version = "*", features = ["dynamic"] }
bevy_tiled_prototype = { git = "https://github.com/j-mcavoy/bevy_tiled.git" }
tiled = "0.9.5"
sepaeii_macros = { path = "sepaeii_macros" }

[features]
destructuring_assignment =[]

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1
